--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=Help-Now
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=https://help-now.net/
+APP_URL=https://help-now.net
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=cqvxrqrfxu
-DB_USERNAME=cqvxrqrfxu
-DB_PASSWORD=sk7n5ScrGt
+DB_DATABASE=pamwqzwmge
+DB_USERNAME=pamwqzwmge
+DB_PASSWORD=YEWdnpZaq4
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
